fixed alignment of client detail

--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -134,6 +134,7 @@
 .sue-text {
   font-size: clamp(1rem, 2vw, 1.2rem);
   /* padding-top: 2rem; */
+  align-self: center;
 }
 
 .certificates-container {
